apps/otp/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otp
  namespace: app
  labels:
    app: otp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otp
  template:
    metadata:
      labels:
        app: otp
    spec:
      serviceAccountName: app-services-sa
      containers:
      - name: otp
        image: 495947449196.dkr.ecr.eu-central-1.amazonaws.com/otp:latest
        ports:
        - name: 5000-tcp
          containerPort: 5000
          protocol: TCP
        resources:
          requests:
            cpu: "512m"
            memory: "1Gi"
          limits:
            cpu: "1024m"
            memory: "2Gi"
