apps/otp/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otp-service
  namespace: app
  labels:
    app: otp
spec:
  type: ClusterIP
  ports:
  - name: 5000-tcp
    port: 5000
    targetPort: 5000
    protocol: TCP
  selector:
    app: otp
