apps/otp/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otp-ingress
  namespace: app
  labels:
    app: otp
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 5000}]'
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /alive
    alb.ingress.kubernetes.io/healthcheck-port: '5000'
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
spec:
  ingressClassName: alb
  rules:
  - host: otp.internal-services
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: otp-service
            port:
              number: 5000
